--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  is_first_run: ^1.0.0
 
 dev_dependencies:
   flutter_test:
