--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   is_first_run: ^1.0.0
   intl: ^0.20.2
   url_launcher: ^6.3.1
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
