--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.20.2
   url_launcher: ^6.3.1
   sqflite: ^2.4.2
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
