--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   url_launcher: ^6.3.1
   sqflite: ^2.4.2
   firebase_core: ^3.12.1
+  firebase_messaging: ^15.2.4
+  flutter_local_notifications: ^19.0.0
 
 dev_dependencies:
   flutter_test:
