Added splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,24 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.5
+
+flutter_native_splash:
+    android: true
+    ios: true
+    web: false
+
+    color: "#e0e0e0"
+    image: "assets/splash.png"
+
+    color_dark: "#212121"
+    image_dark: "assets/dark_splash.png"
+
+    android_12:
+      color: "#e0e0e0"
+      image: "assets/splash.png"
+      color_dark: "#212121"
+      image_dark: "assets/dark_splash.png"
 
 
 flutter:
@@ -40,6 +58,6 @@ flutter:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: "AppIcon"
-  image_path: "assets/newphone_logo_150.png"
+  image_path: "assets/splash.png"
   min_sdk_android: 21
   remove_alpha_ios: true
