--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   is_first_run: ^1.0.0
   intl: ^0.20.2
   url_launcher: ^6.3.2
-  sqflite: ^2.4.2
+  google_fonts: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +47,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/images/
 
 flutter_launcher_icons:
   android: "launcher_icon"
