--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_fonts: ^6.3.0
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
+  package_info_plus: ^8.3.1
 
 dev_dependencies:
   flutter_test:
