--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
   package_info_plus: ^8.3.1
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/icons/
 
 flutter_launcher_icons:
   android: "launcher_icon"
