--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.newsphoneCompetitions</string>
+	<string>com.akep.14614</string>
 	<key>PROJECT_ID</key>
 	<string>newphone-test</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:560508338889:ios:a90904a110975077004318</string>
+	<string>1:560508338889:ios:f41071af7640c120004318</string>
 </dict>
 </plist>
