--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -40,8 +40,11 @@
     </array>
     <key>UIBackgroundModes</key>
     <array>
+        <string>fetch</string>
         <string>remote-notification</string>
     </array>
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <true/>
     <key>NSUserNotificationUsageDescription</key>
     <string>This app would like to send you notifications.</string>
 	<key>UISupportedInterfaceOrientations</key>
