--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_core: ^4.1.0
   firebase_messaging: ^16.0.1
+  firebase_analytics: ^12.0.3
   flutter_local_notifications: ^19.4.2
   http: ^1.5.0
   hive: ^2.2.3
