--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,11 @@ flutter_native_splash:
   ios: true
   web: false
 
-  color: "#e0e0e0"
+  color: "#0072bc"
   image: "assets/android12.png"
 
   android_12:
-    color: "#e0e0e0"
+    color: "#0072bc"
     image: "assets/android12.png"
     image_dark: "assets/android12.png"
 
