--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_messaging: ^16.0.1
   firebase_analytics: ^12.0.3
   flutter_local_notifications: ^19.4.2
+  firebase_auth: ^6.1.2
   http: ^1.5.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
