Iphone run and success

--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>560508338889-27k7d58mehguojalf5tbbh1fc6vugdam.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.560508338889-27k7d58mehguojalf5tbbh1fc6vugdam</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>560508338889-1bq9tqfm72ln31cpsjn8ejaicrfs20l7.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC6_2uk_EIgMY7U5OgU5aT9NliueP6BZzE</string>
 	<key>GCM_SENDER_ID</key>
