--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+	    <key>CFBundleURLTypes</key>
+            	<array>
+            		<dict>
+            			<key>CFBundleTypeRole</key>
+            			<string>Editor</string>
+            			<key>CFBundleURLSchemes</key>
+            			<array>
+            				<string>com.googleusercontent.apps.560508338889-27k7d58mehguojalf5tbbh1fc6vugdam</string>
+            			</array>
+            		</dict>
+            	</array>
 		<key>CADisableMinimumFrameDurationOnPhone</key>
 		<true/>
 		<key>CFBundleDevelopmentRegion</key>
